--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>سـبـائـك الكويت</title>
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 
 </head>
 <body>
@@ -77,6 +77,6 @@
     <button class="btn-share">مشاركة السعر</button>
   </footer>
 
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
